--- a/portfollio/package.json
+++ b/portfollio/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
